--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,78 +1,29 @@
-<div class="container">
+<section>
+  <div class="container">
     <div class="row">
       <div class="col-md-12" align="center">
         <br>
-        <br>
-        <h1>Bienvenido</h1>
-      </div>
-      <div class="col-md-12">
-        <hr color="blue">
-        <br>
+        <h1>Bienvenido {{persona.nombre_1 + " "+persona.apellido_1}}</h1>
       </div>
     </div>
-    <div class="row" *ngIf="loading">
-      <div class="col-md-12">
-        <div class="spinner-border text-info float-right" role="status">
-          <span class="sr-only">Loading...</span>
-        </div>
+    <div class="row">
+
+      <div class="col-md-10" align="right">
+        <button type="button" class="btn btn-info" (click)="mostrarPerfil()">Perfil</button>
       </div>
-      <br>
-      <br>
+
+      <div class="col-md-2" align="center">
+        <button type="button" class="btn btn-danger" (click)="logout()">Cerrar Sesión</button>
+      </div>
+
+      <div class="col-md-2" align="center">
+        <button type="button" class="btn btn-danger" (click)="ingresarPersona()">Ingresar Persona</button>
+      </div>
+
+    </div>
+    <div class="col-md-12">
+      <hr color="blue">
     </div>
   </div>
-  
-  <section>
-    <div class="containter">
-      <div class="row">
-  
-        <div class="col-md-3" align="center">
-        </div>
-  
-        <div class="col-md-6" align="center">
-          <div class="col-md-9">
-            <h4>Inicia sesión para acceder al sistema</h4>
-            <hr>
-            <form (ngSubmit)="login()" id="login">
-  
-              <div class="row">
-                <div class="col-md-12">
-                  <input type="text" [(ngModel)]="usuario.nombreUsuario" [ngModelOptions]="{standalone: true}"
-                    placeholder="Nombre" class="form-control" required>
-                </div>
-              </div>
-  
-              <br>
-  
-              <div class="row">
-                <div class="col-md-12">
-                  <input type="password" [(ngModel)]="usuario.password" [ngModelOptions]="{standalone: true}"
-                    placeholder="Password" class="form-control" required>
-                </div>
-              </div>
-  
-              <br>
-  
-              <div class="row">
-                <div class="col-md-12">
-                  <input class="btn btn-info float-left" type="submit" value="Ingresar">
-                </div>
-              </div>
-  
-            </form>
-  
-            <div class="row" *ngIf="errorInicio">
-              <div class="col-md-12">
-                <label class="float-center" style="color: red;">Usuario o password incorrecto</label>
-              </div>
-            </div>
-  
-          </div>
-        </div>
-  
-        <div class="col-md-3" align="center">
-        </div>
-  
-      </div>
-    </div>
-  </section>
-  
+</section>
+
